--- a/.helm/templates/deployment.yaml
+++ b/.helm/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-app-deploy
+  name: app-deploy
 spec:
   selector:
     matchLabels:
@@ -16,7 +16,7 @@ spec:
         app: app
     spec:
       containers:
-        - name: {{ .Release.Name }}-nodejs
+        - name: nodejs
           image: '{{ .Values.werf.image.app }}'
           workingDir: /app
           env:
@@ -33,7 +33,11 @@ spec:
             - name: DB_PASSWORD
               value: '{{ .Values.postgresql.auth.password }}'
             - name: REDIS_HOST
-              value: '{{ .Release.Name }}-redis-master'
+              value: '{{ .Values.redis.host }}'
+            - name: REDIS_PASSWORD
+              value: '{{ .Values.redis.password }}'
+            - name: REDIS_DB
+              value: '{{ .Values.redis.db }}'
             - name: NODE_ENV
               value: '{{ .Values.werf.env | default "production" }}'
             - name: PROXY_HOST
